--- a/Assignment_5/Q9.html
+++ b/Assignment_5/Q9.html
@@ -4,73 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing Table</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .pricing-table {
-            display: flex;
-            justify-content: space-between;
-            max-width: 800px;
-            width: 100%;
-        }
-
-        .plan {
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 20px;
-            text-align: center;
-            flex: 1;
-            margin: 0 10px;
-            transition: transform 0.3s;
-        }
-
-        .plan:hover {
-            transform: scale(1.05);
-        }
-
-        .popular {
-            background-color: #007bff;
-            color: white;
-        }
-
-        .plan h2 {
-            margin: 0;
-            font-size: 24px;
-        }
-
-        .plan p {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-
-        .price {
-            font-size: 32px;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-
-        .button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel= "stylesheet" href="styles.css">
 </head>
 <body>
 
