--- a/Assignment_5/Q9.html
+++ b/Assignment_5/Q9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing Table</title>
-    <link rel= "stylesheet" href="styles.css">
+    <link rel= "stylesheet" href="q9_styles.css">
 </head>
 <body>
 
