--- a/Assignment_5/Q11.html
+++ b/Assignment_5/Q11.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box with Hover Effect</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="q11_styles.css">
 </head>
 <body>
     <div class="box">
