--- a/Assignment_5/Q4.html
+++ b/Assignment_5/Q4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Navigation Menu</title>
+    <title>Styled Navigation Menu</title>
     <link rel="stylesheet" href="q4_styles.css">
 </head>
 <body>
