--- a/Assignment_5/Q8.html
+++ b/Assignment_5/Q8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
+    <title>Form Styling</title>
     <link rel="stylesheet" href="q8_styles.css">
 </head>
 <body>
