--- a/Assignment_5/Q10.html
+++ b/Assignment_5/Q10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Screen Example</title>
+    <title>Animated Loading Screen</title>
     <link rel="stylesheet" href="q10_styles.css">
 </head>
 <body>
