--- a/Assignment_5/Q11.html
+++ b/Assignment_5/Q11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box with Hover Effect</title>
+    <title>Box Model Challenge</title>
     <link rel="stylesheet" href="q11_styles.css">
 </head>
 <body>
