--- a/Assignment_5/Q14.html
+++ b/Assignment_5/Q14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vertical Timeline</title>
+    <title>Timeline Design</title>
     <link rel="stylesheet" href="q14_styles.css">
 </head>
 <body>
