--- a/Assignment_5/Q15.html
+++ b/Assignment_5/Q15.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Translucent Gradient Text</title>
+    <title>TCSS Gradient Effects</title>
     <link rel="stylesheet" href="q15_styles.css">
 </head>
 <body>
