--- a/Assignment_5/Q2.html
+++ b/Assignment_5/Q2.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Card Layout with Hover Effects</title>
+ <title>Hover Effects</title>
  <link rel="stylesheet" href="q2_styles.css">
 </head>
  <div class="card-container">
